# esther_katyal

./: .gitignore  COMPLETE_SOURCE.py  COMPLETE_SOURCE_V2.py  COMPLETE_SOURCE_V3.py  COMPLETE_SOURCE_V4.py  COMPLETE_SOURCE_V5.py  README.md  build_v4.py  config-sandbox-fullthrottle.yaml  config-tradier.yaml  config.yaml  get_intel.py  pyproject.toml  run_sage.py
.neo_backup/: esther_data_tradier.py_20260407_100107.bak  esther_data_tradier.py_20260407_102110.bak  esther_data_tradier.py_20260407_104305.bak  esther_data_tradier.py_20260407_104346.bak  esther_data_tradier.py_20260407_104436.bak  esther_data_tradier.py_20260407_104515.bak  esther_data_tradier.py_20260407_104743.bak  esther_data_tradier.py_20260407_104821.bak  esther_data_tradier.py_20260407_104903.bak  esther_data_tradier.py_20260407_104945.bak  esther_data_tradier.py_20260407_105023.bak  esther_data_tradier.py_20260407_105124.bak  esther_data_tradier.py_20260407_105210.bak  esther_data_tradier.py_20260407_105258.bak  esther_data_tradier.py_20260407_142237.bak  esther_data_tradier.py_20260407_142333.bak  esther_data_tradier.py_20260407_142414.bak
data/: gtc_orders.json  sunday_review.txt  weekly_plan.json
data/intel/: eod_2026-04-02_1224.json  eod_2026-04-02_1543.json  eod_2026-04-02_1546.json  eod_2026-04-02_1547.json  eod_2026-04-02_1827.json  eod_2026-04-03_1039.json  (+98 more)
docs/: strategy-reference.md
esther/: __init__.py
scripts/: run_backtest.py  run_live.py  start_esther.sh
tests/: test_bias_engine.py  test_pillars.py  test_premarket.py  test_quality_filter.py  test_risk_manager.py
(+37 files in other folders)
